objects/IPR_Config_List_Item__c.object
<CustomObject>
    <description>Junction between Configuration (Apttus_Proposal__Proposal__c) and CMOS BU IP Request (CMOS_BU_IP_Request__c)</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>IPR Config List</relationshipLabel>
        <relationshipName>IPR_Config_List</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPRD_id__c</fullName>
        <label>IPRD id</label>
        <referenceTo>CMOS_BU_IP_Request__c</referenceTo>
        <relationshipLabel>IPR Config List</relationshipLabel>
        <relationshipName>IPR_Config_List</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IPs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>IPR Config List Item</label>
    <nameField>
        <displayFormat>IPRC-{000000}</displayFormat>
        <label>IPR Config List Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPR Config List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>